Layout issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,13 @@ nav ul li a.active {
         width: 80%;
         font-size: 18px;
     }
+
+    .svgcontainer {
+        width: 500px;
+         height: auto;
+         border: 1px solid grey;
+         overflow: auto;
+}
 }
 
     
